Implemented Edit Recipe functionality

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Recipe Box</title>
+    <title>ListRecipes Box</title>
     <link rel="stylesheet" href="../style/_custom.scss">
 </head>
 <body>
     <div id="app">
         <div class="jumbotron alert-info">
             <div class="container">
-                <h1 class="display-4">Recipe Encyclopedia</h1>
+                <h1 class="display-4">ListRecipes Encyclopedia</h1>
                 <p class="lead">You are what you eat.</p>
             </div>
         </div>
@@ -19,7 +19,7 @@
             <div class="row">
                 <div class="input-group">
                     <div class="input-group-prepend">
-                        <span class="input-group-text">Recipe Name and Description</span>
+                        <span class="input-group-text">ListRecipes Name and Description</span>
                     </div>
                     <input type="text" aria-label="name" class="form-control recipe-name">
                     <input type="text" aria-label="description" class="form-control recipe-description">
@@ -30,7 +30,7 @@
 
             <div class="row">
                 <button id="addRecipe" type="button" class="btn btn-success btn-block">
-                    Add Recipe
+                    Add ListRecipes
                 </button>
             </div>
 
@@ -56,11 +56,15 @@
                         </div>
                         <div class="modal-body">
                             <p id="modalDescription"></p>
+                            <div class="modal-edit hidden">
+                               <input type="text" aria-label="name" class="form-control recipe-name-edit">
+                               <input type="text" aria-label="name" class="form-control recipe-description-edit">
+                            </div>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary closeModal" data-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary edit-recipe">Edit Recipe</button>
-                            <button type="button" class="btn btn-success save-recipe hidden">Save Recipe</button>
+                            <button type="button" class="btn btn-primary edit-recipe">Edit ListRecipes</button>
+                            <button type="button" class="btn btn-success save-recipe hidden">Save ListRecipes</button>
                         </div>
                     </div>
                 </div>
