--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="app">
         <div class="jumbotron alert-info">
             <div class="container">
-                <h1 class="display-4">ListRecipes Encyclopedia</h1>
+                <h1 class="display-4">Recipes Encyclopedia</h1>
                 <p class="lead">You are what you eat.</p>
             </div>
         </div>
@@ -19,7 +19,7 @@
             <div class="row">
                 <div class="input-group">
                     <div class="input-group-prepend">
-                        <span class="input-group-text">ListRecipes Name and Description</span>
+                        <span class="input-group-text">Recipe Name and Description</span>
                     </div>
                     <input type="text" aria-label="name" class="form-control recipe-name">
                     <input type="text" aria-label="description" class="form-control recipe-description">
