Fixed design issues and removed unnecessary code

--- a/index.html
+++ b/index.html
@@ -57,8 +57,23 @@
                         <div class="modal-body">
                             <p id="modalDescription"></p>
                             <div class="modal-edit hidden">
-                               <input type="text" aria-label="name" class="form-control recipe-name-edit">
-                               <input type="text" aria-label="name" class="form-control recipe-description-edit">
+                                <div class="row">
+                                    <div class="col-sm-3">
+                                        <label>Name: </label>
+                                    </div>
+                                    <div class="col-sm-9">
+                                        <input type="text" aria-label="name" class="form-control recipe-name-edit">
+                                    </div>
+                                </div>
+                                <br/>
+                                <div class="row">
+                                    <div class="col-sm-3">
+                                        <label>Description: </label>
+                                    </div>
+                                    <div class="col-sm-9">
+                                        <input type="text" aria-label="name" class="form-control recipe-description-edit">
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="modal-footer">
